--- a/app/extensions/brave/locales/en-US/preferences.properties
+++ b/app/extensions/brave/locales/en-US/preferences.properties
@@ -51,6 +51,7 @@ viewPaymentHistory=View Payment History
 paymentHistoryTitle=Your Payment History
 paymentHistoryFooterText=Your next payment contribution is {{reconcileDate}}.
 paymentHistoryOKText=OK
+hideExcluded=hide excluded sites
 bravePayments=Brave Payments
 beta=beta
 contributionDate=Contribution Date
@@ -111,6 +112,7 @@ views=Views
 timeSpent=Time Spent
 include=Include
 percentage=%
+remove=Remove
 bravery=Bravery
 hintsTitle=Helpful hints
 hint0=The Bravery panel allows you to turn HTTPS Everywhere on or off. HTTPS Everywhere automatically changes your HTTP traffic to HTTPS for supported sites to keep you more secure.
